tests/valid/functions/forward_decl_args.rs
/*
return: 4
*/

foo(a: int): int;

main(): int{
    return foo(3);
}

foo(a: int): int{
    return a + 1;
}