tests/invalid/global_variables/var_redefined_as_fun.rs
/*
fail: 1
*/

foo: int = 4;

foo(): int {
    return 3;
}

main(): int {
    return foo;
}